corrected z-index map issue by reverting back zindex to map and adding to navbar itself

--- a/backend/src/public/css/map_leaflet.css
+++ b/backend/src/public/css/map_leaflet.css
@@ -1,4 +1,7 @@
 #mapid {
   height: 480px;
-  z-index: -1;
+}
+
+.navbar.is-fixed-top {
+  z-index: 20000;
 }
